--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,5 +17,6 @@ jobs:
           python-version: 3.x
       - run: pip install -U git+https://github.com/mkdocs/mkdocs.git#egg=mkdocs
       - run: pip install mkdocs-material
+      - run: pip install mkdocs-glightbox
       - run: mkdocs gh-deploy --force
       - run: mkdocs --version
