--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,18 +13,23 @@ nav:
     - Overview: 'overview_ingestion.md'
     - FHIR Connector: 'comingsoon.md'
     - FiveTran: 'comingsoon.md'
+    - Matillion: 'comingsoon.md'
   - Add-on Use Case Components:
     - Overview: 'overview_addon.md'
     - RDS Plug & Play: 'https://github.com/aws-samples/amazon-isv-plug-n-play'
+    - Modular Architecture for Amazon Redshift Deployment: 'https://aws.amazon.com/quickstart/architecture/amazon-redshift/'
     - Cabon Data Lake: 'https://aws.amazon.com/solutions/guidance/carbon-data-lake-on-aws/'
     - Data Connector for AWS Data Clean Rooms: 'https://aws.amazon.com/solutions/guidance/connecting-data-clean-rooms/'
     - Alation: 'comingsoon.md'
+    - Collibra: 'comingsoon.md'
     - AWS QuickSignt Gallery: 'https://aws.amazon.com/quicksight/gallery/'
     - CI/CD of QuickSight Assets in SaaS Silo Deployment: 'https://github.com/aws-samples/saas-silo-quicksight-assets-cicd-solution'
     - BI in a Box: 'comingsoon.md'
     - Domo: 'comingsoon.md'
     - Fraud Detection: 'comingsoon.md'
-    - ID resolution: 'comingsoon.md'
+    - ID Resolution: 'comingsoon.md'
+    - Amperity: 'comingsoon.md'
+    - Aerospike: 'comingsoon.md'
   - Example Blueprints:
     - Overview: 'overview_blueprints.md'
     - Customer 360: 'comingsoon.md'
